--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     <li>
                         <a href="/career">CAREER</a>
                     </li>
-                    <li>
-                        <a href="/about">CONTACT</a>
+                    <li class="contact">
+                        <a class="contact-a" id="contactA" href="/contact">CONTACT</a>
                     </li>
                 </ul>
             </nav>
