--- a/index.html
+++ b/index.html
@@ -70,38 +70,41 @@
                 </div>
             </div>
             <div class="botbox">
-                <div class="box">
-                    <div class="title">
-                        <h4>Web Development</h4>
+                <div class="bots">
+                    <div class="box">
+                        <div class="title">
+                            <h4>Web Development</h4>
+                        </div>
+                        <div class="title">
+                            <span>Expert web development for a powerful online presence. Build your dream website.</span>
+                        </div>
                     </div>
-                    <div class="title">
-                        <span>Expert web development for a powerful online presence. Build your dream website.</span>
+                    <div class="box">
+                        <div class="title">
+                            <h4>Web Development</h4>
+                        </div>
+                        <div class="title">
+                            <span>Expert web development for a powerful online presence. Build your dream website.</span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="title">
+                            <h4>Web Development</h4>
+                        </div>
+                        <div class="title">
+                            <span>Expert web development for a powerful online presence. Build your dream website.</span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="title">
+                            <h4>Web Development</h4>
+                        </div>
+                        <div class="title">
+                            <span>Expert web development for a powerful online presence. Build your dream website.</span>
+                        </div>
                     </div>
                 </div>
-                <div class="box">
-                    <div class="title">
-                        <h4>Web Development</h4>
-                    </div>
-                    <div class="title">
-                        <span>Expert web development for a powerful online presence. Build your dream website.</span>
-                    </div>
-                </div>
-                <div class="box">
-                    <div class="title">
-                        <h4>Web Development</h4>
-                    </div>
-                    <div class="title">
-                        <span>Expert web development for a powerful online presence. Build your dream website.</span>
-                    </div>
-                </div>
-                <div class="box">
-                    <div class="title">
-                        <h4>Web Development</h4>
-                    </div>
-                    <div class="title">
-                        <span>Expert web development for a powerful online presence. Build your dream website.</span>
-                    </div>
-                </div>
+               
             </div>
         </div>
     </div>
